created modals for edit delete and create

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -16,9 +16,9 @@
 }
 
 .secondary{
-    background-color:brown
+     background-color:#345484;
 }
 
 .success{
-    background-color: #4CAF50;
+     background-color:#97a433;
 }
